--- a/totaalbedrag.html
+++ b/totaalbedrag.html
@@ -1,1 +1,12 @@
-<html></html>
+<html lang="nl">
+
+    <head>
+        <link rel="stylesheet" href="totaalbedrag.css">
+    </head>
+
+    <body>
+    
+    <h1>Hallo</h1>
+    
+    </body>
+</html>
